// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Form Default renders correctly 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra attributes 1`] = `
<jest>
  <form
    class="ecl-search-form"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra class names 1`] = `
<jest>
  <form
    class="ecl-search-form custom-class custom-class--test"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra classes on the button 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button button-extra-class"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra classes on the input 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input input-extra-class"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
  </form>
</jest>
`;

exports[`Search Form Default renders correctly with extra form elements 1`] = `
<jest>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input-id"
        id="search-input-id-label"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input-id"
        placeholder="Placeholder text"
        type="search"
      />
    </div>
    <button
      class="ecl-button ecl-button--ghost ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#search"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
      </span>
    </button>
    <input
      id="custId"
      name="custId"
      type="hidden"
      value="1"
    />
  </form>
</jest>
`;
